noticeably quicker now, hopefully it translates to deployed + can do 10? 100? recipes per page
